--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "nanoid": "^5.0.7",
         "react": "^18.2.0",
         "react-confetti": "^6.1.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-refresh": "^0.14.2",
+        "react-switch": "^7.0.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.66",
